{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 40,
  "lineage": "b716802a-142b-60bb-3e7e-84a558c31407",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-733964557",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0376b5a88da674266",
            "security_group_rule_id": "sgr-05572059a4c2394a7",
            "self": false,
            "source_security_group_id": "sg-07607d340873bfc3b",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg",
            "module.sg_app_server.aws_security_group.sg",
            "module.sg_rds.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.app-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:loadbalancer/app/tf-apptier-alb/e32613134cfb6a6c",
            "arn_suffix": "app/tf-apptier-alb/e32613134cfb6a6c",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-tf-apptier-alb-2136479897.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:277741577842:loadbalancer/app/tf-apptier-alb/e32613134cfb6a6c",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-apptier-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b18aa6557d8c2eb5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09290dfed36143b00"
              },
              {
                "subnet_id": "subnet-0c0fc105c591e8ad0"
              }
            ],
            "subnets": [
              "subnet-09290dfed36143b00",
              "subnet-0c0fc105c591e8ad0"
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-apptier-alb"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-apptier-alb"
            },
            "vpc_id": "vpc-0fdb67b91f8f0894d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_app.aws_security_group.sg",
            "module.subnet-priv-1a.aws_subnet.subnet",
            "module.subnet-priv-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.appTier-tg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:targetgroup/tf-appTier-tg/a024e7e8857a861d",
            "arn_suffix": "targetgroup/tf-appTier-tg/a024e7e8857a861d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:277741577842:targetgroup/tf-appTier-tg/a024e7e8857a861d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-appTier-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-apptier-tg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-apptier-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fdb67b91f8f0894d"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6a89cd7cd2c39f2",
            "domain": "vpc",
            "id": "eipalloc-0b6a89cd7cd2c39f2",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-233-183-61.us-west-2.compute.amazonaws.com",
            "public_ip": "44.233.183.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Kind": "practice",
              "Name": "tf-eip-1"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.http_listener_app",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:listener/app/tf-apptier-alb/e32613134cfb6a6c/be556badcdb64c66",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:targetgroup/tf-appTier-tg/a024e7e8857a861d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:277741577842:listener/app/tf-apptier-alb/e32613134cfb6a6c/be556badcdb64c66",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:loadbalancer/app/tf-apptier-alb/e32613134cfb6a6c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app-alb.aws_lb.my_alb",
            "module.appTier-tg.aws_lb_target_group.tg",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_app.aws_security_group.sg",
            "module.subnet-priv-1a.aws_subnet.subnet",
            "module.subnet-priv-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.http_listener_web",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:listener/app/tf-webtier-alb/d80ce5d4daf8fb74/d1c830e6d9e6783c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:targetgroup/tf-webTier-tg/4780175a7dcaa8a6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:277741577842:listener/app/tf-webtier-alb/d80ce5d4daf8fb74/d1c830e6d9e6783c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:loadbalancer/app/tf-webtier-alb/d80ce5d4daf8fb74",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg",
            "module.subnet-pub-1a.aws_subnet.subnet",
            "module.subnet-pub-1b.aws_subnet.subnet",
            "module.web-alb.aws_lb.my_alb",
            "module.webTier-tg.aws_lb_target_group.tg"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:internet-gateway/igw-06fdc5aec054170c7",
            "id": "igw-06fdc5aec054170c7",
            "owner_id": "277741577842",
            "tags": {
              "Kind": "practice",
              "Name": "tf-igw"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-igw"
            },
            "vpc_id": "vpc-0fdb67b91f8f0894d"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:vpc/vpc-0fdb67b91f8f0894d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-07a7728f0f0e4ff8f",
            "default_route_table_id": "rtb-0529974baa9fade82",
            "default_security_group_id": "sg-0845bb30bb2456258",
            "dhcp_options_id": "dopt-0bd0b9e52d54fe088",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fdb67b91f8f0894d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0529974baa9fade82",
            "owner_id": "277741577842",
            "tags": {
              "Kind": "practice",
              "Name": "tf-vpc"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6a89cd7cd2c39f2",
            "association_id": "eipassoc-0721cccdd34fd7c17",
            "connectivity_type": "public",
            "id": "nat-01e637ae94dd76e22",
            "network_interface_id": "eni-0a95e5b41fa89dff1",
            "private_ip": "172.16.1.5",
            "public_ip": "44.233.183.61",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06e26cc200b7b3bd3",
            "tags": {
              "Kind": "practice",
              "Name": "tf-nat-1"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-nat-1"
            }
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.private_rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:route-table/rtb-03c59726ce846f440",
            "id": "rtb-03c59726ce846f440",
            "owner_id": "277741577842",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01e637ae94dd76e22",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-rt-private"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdb67b91f8f0894d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.public_rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:route-table/rtb-07681a981f43f3504",
            "id": "rtb-07681a981f43f3504",
            "owner_id": "277741577842",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06fdc5aec054170c7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-rt-public"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdb67b91f8f0894d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_priv_1a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08425f6d618bc1b24",
            "route_table_id": "rtb-03c59726ce846f440",
            "subnet_id": "subnet-09290dfed36143b00"
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.private_rt.aws_route_table.my_rt",
            "module.subnet-priv-1a.aws_subnet.subnet",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_priv_1b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06be2c50039bba994",
            "route_table_id": "rtb-03c59726ce846f440",
            "subnet_id": "subnet-0c0fc105c591e8ad0"
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.private_rt.aws_route_table.my_rt",
            "module.subnet-priv-1b.aws_subnet.subnet",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_pub_1a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08887937ba634374c",
            "route_table_id": "rtb-07681a981f43f3504",
            "subnet_id": "subnet-06e26cc200b7b3bd3"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.public_rt.aws_route_table.my_rt",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_pub_1b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086d0e92290f89680",
            "route_table_id": "rtb-07681a981f43f3504",
            "subnet_id": "subnet-0b78401fa1277e8b7"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.public_rt.aws_route_table.my_rt",
            "module.subnet-pub-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_rds_priv_1a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ea193563f581e97",
            "route_table_id": "rtb-03c59726ce846f440",
            "subnet_id": "subnet-0b88f3cc54e3910da"
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.private_rt.aws_route_table.my_rt",
            "module.subnet-pub-1a.aws_subnet.subnet",
            "module.subnet-rds-priv-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_rds_priv_1b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8a75b45f14b3221",
            "route_table_id": "rtb-03c59726ce846f440",
            "subnet_id": "subnet-0c140c0216858c3a9"
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.private_rt.aws_route_table.my_rt",
            "module.subnet-pub-1a.aws_subnet.subnet",
            "module.subnet-rds-priv-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.sg_alb_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:security-group/sg-0b18aa6557d8c2eb5",
            "description": " SG for APP ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b18aa6557d8c2eb5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-alb-sg",
            "name_prefix": "",
            "owner_id": "277741577842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-app-alb-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-app-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdb67b91f8f0894d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_alb_web",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:security-group/sg-0f6d2e38b41a75520",
            "description": " SG for WEB ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6d2e38b41a75520",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-alb-sg",
            "name_prefix": "",
            "owner_id": "277741577842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-web-alb-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-web-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdb67b91f8f0894d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_app_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:security-group/sg-0376b5a88da674266",
            "description": " SG for app_server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0376b5a88da674266",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow on 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f6d2e38b41a75520"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "allow on 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f6d2e38b41a75520"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app_server-sg",
            "name_prefix": "",
            "owner_id": "277741577842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-app_server-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-app_server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdb67b91f8f0894d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.sg_rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:security-group/sg-07607d340873bfc3b",
            "description": "SG for rds",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "allow",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0376b5a88da674266"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-07607d340873bfc3b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow on 3306",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0376b5a88da674266"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tf_sg_rds",
            "name_prefix": "",
            "owner_id": "277741577842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-db-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdb67b91f8f0894d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg",
            "module.sg_app_server.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.sg_web_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:security-group/sg-0a40cba70b7f92609",
            "description": " SG for web_server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a40cba70b7f92609",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow on 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f6d2e38b41a75520"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "allow on 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f6d2e38b41a75520"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_server-sg",
            "name_prefix": "",
            "owner_id": "277741577842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-web_server-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-web_server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdb67b91f8f0894d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-1a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:subnet/subnet-09290dfed36143b00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09290dfed36143b00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277741577842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-priv-us-west-2a"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-priv-us-west-2a"
            },
            "vpc_id": "vpc-0fdb67b91f8f0894d"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-1b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:subnet/subnet-0c0fc105c591e8ad0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0fc105c591e8ad0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277741577842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-priv-us-west-2b"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-priv-us-west-2b"
            },
            "vpc_id": "vpc-0fdb67b91f8f0894d"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-pub-1a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:subnet/subnet-06e26cc200b7b3bd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e26cc200b7b3bd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277741577842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-pub-us-west-2a"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-pub-us-west-2a"
            },
            "vpc_id": "vpc-0fdb67b91f8f0894d"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-pub-1b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:subnet/subnet-0b78401fa1277e8b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b78401fa1277e8b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277741577842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-pub-us-west-2b"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-pub-us-west-2b"
            },
            "vpc_id": "vpc-0fdb67b91f8f0894d"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-rds-priv-1a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:subnet/subnet-0b88f3cc54e3910da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b88f3cc54e3910da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277741577842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-priv-rds-us-west-2a"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-priv-rds-us-west-2a"
            },
            "vpc_id": "vpc-0fdb67b91f8f0894d"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-rds-priv-1b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:subnet/subnet-0c140c0216858c3a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c140c0216858c3a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277741577842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-priv-rds-us-west-2b"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-priv-rds-us-west-2b"
            },
            "vpc_id": "vpc-0fdb67b91f8f0894d"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:loadbalancer/app/tf-webtier-alb/d80ce5d4daf8fb74",
            "arn_suffix": "app/tf-webtier-alb/d80ce5d4daf8fb74",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-webtier-alb-1588908561.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:277741577842:loadbalancer/app/tf-webtier-alb/d80ce5d4daf8fb74",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-webtier-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f6d2e38b41a75520"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06e26cc200b7b3bd3"
              },
              {
                "subnet_id": "subnet-0b78401fa1277e8b7"
              }
            ],
            "subnets": [
              "subnet-06e26cc200b7b3bd3",
              "subnet-0b78401fa1277e8b7"
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-webtier-alb"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-webtier-alb"
            },
            "vpc_id": "vpc-0fdb67b91f8f0894d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg",
            "module.subnet-pub-1a.aws_subnet.subnet",
            "module.subnet-pub-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.webTier-tg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:targetgroup/tf-webTier-tg/4780175a7dcaa8a6",
            "arn_suffix": "targetgroup/tf-webTier-tg/4780175a7dcaa8a6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:277741577842:targetgroup/tf-webTier-tg/4780175a7dcaa8a6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-webTier-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-webtier-tg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-webtier-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fdb67b91f8f0894d"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    }
  ]
}